# TROws

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: tro.pc
devel/lib/tro/: tro
devel/share/tro/cmake/: troConfig.cmake
src/tro/: CMakeLists.txt  package.xml
src/tro/include/: TRO.hh
src/tro/src/: TRO.cpp  main.cpp
